save menu item added

--- a/res/values/strings.xml
+++ b/res/values/strings.xml
@@ -26,6 +26,7 @@
     <string name="myrcene">Myrcene</string>
     <string name="caryophyllene">Caryophyllene</string>
     <string name="notes">Notes</string>
+    <string name="save">Save</string>
     
     
 </resources>
